[gd_scene load_steps=7 format=2]

[ext_resource path="res://OpenDyslexic/OpenDyslexic-Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://buttons/buttonLong_beige.png" type="Texture" id=2]
[ext_resource path="res://buttons/buttonLong_beige_pressed.png" type="Texture" id=3]
[ext_resource path="res://buttons/buttonLong_brown.png" type="Texture" id=4]
[ext_resource path="res://j3_config.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 1 )

[node name="j3_config" type="Node2D"]
script = ExtResource( 6 )
dropdown_path = NodePath("VBoxContainer/HBoxContainer0/dropdown")

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.709804, 0.866667, 0.643137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1280.0
margin_bottom = 800.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titulo" type="Label" parent="VBoxContainer"]
margin_right = 1260.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 1 )
text = "CONFIGURAÇÕES: Desafio das Imagens"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer0" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 1260.0
margin_bottom = 152.0
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label1" type="Label" parent="VBoxContainer/HBoxContainer0"]
margin_right = 311.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 1 )
text = "Tipo de jogo: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dropdown" type="OptionButton" parent="VBoxContainer/HBoxContainer0"]
margin_left = 313.0
margin_right = 342.0
margin_bottom = 74.0
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 1260.0
margin_bottom = 230.0
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label1" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 523.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 1 )
text = "Quantidade de imagens"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="n_img" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 525.0
margin_right = 599.0
margin_bottom = 74.0
min_value = 4.0
max_value = 50.0
step = 2.0
value = 4.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltar" type="TextureButton" parent="."]
margin_left = 234.0
margin_top = 432.0
margin_right = 534.0
margin_bottom = 512.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lab_voltar" type="Label" parent="Voltar"]
margin_left = 27.0
margin_top = -18.0
margin_right = 247.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Comecar" type="TextureButton" parent="."]
margin_left = 744.0
margin_top = 434.0
margin_right = 1044.0
margin_bottom = 514.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lab_começar" type="Label" parent="Comecar"]
margin_left = -5.0
margin_top = -16.0
margin_right = 215.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "Começar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="erro" type="Label" parent="."]
visible = false
margin_left = 23.0
margin_top = 312.0
margin_right = 1241.0
margin_bottom = 386.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.862745, 0.0980392, 0.0980392, 1 )
text = "Erro: A pasta Memo deve ter pelo menos 100 imagens"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="VBoxContainer/HBoxContainer0/dropdown" to="." method="_on_dropdown_item_selected"]
[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]
[connection signal="pressed" from="Comecar" to="." method="_on_Comecar_pressed"]
